css/styles.css
@font-face {
  font-family: "Raleway";
  src: url("../font/Raleway-VariableFont_wght.ttf");
}

html {
  font-family: "Raleway";
}

.company_header {
  max-width: 100%;
  display: flex;
  justify-content: space-between;
  font-size: 12px;
}

.company_logo {
  max-height: 4em;
  margin-top: 2em;
}

.top_nav_menu {
  display: flex;
  justify-content: space-around;
}

.top_nav_menu a {
  color: #0065fc;
  text-decoration: none;
  height: 4em;
  margin-top: 3em;
  margin-left: 2em;
  margin-right: 2em;
}

.top_nav_menu a:hover {
  color: #fc3b00;
}

.top_nav_menu a:active {
  color: #08fc00;
}

/*Search Input Elements*/

.search_input_section {
  width: 100%;
  height: 25%;
}

.search_input_main_label {
  font-weight: bold;
}

.search_input_secondary_label {
  font-size: 10px;
}

.search_field_container {
  display: flex;
}

.search_field_location_logo {
  width: 2em;
  height: 2em;
  justify-content: center;
  align-items: center;
  background-color: #f2f2f2;
  padding-top: 0.7em;
  text-align: center;
}

.location_input_field {
  border: 1px solid #f2f2f2;
  outline: none;
}

.location_search_button {
  width: 12em;
  border-bottom-right-radius: 0.4em;
  border-top-right-radius: 0.4em;
  background-color: #0065fc;
  color: white;
  font-weight: bold;
  outline: none;
  border: none;
}

.search_filter_icon {
  height: 2em;
  width: 2em;
  background-color: #deebff;
  border-radius: 1em;
  display: flex;
  justify-content: center;
  align-items: center;
}

.search_filters_container {
  display: flex;
}

/*accommodation*/

.accommodation_section {
  width: 100%;
  display: flex;
}

.main_search_result {
  width: 100%;
  background-color: #f2f2f2;
  border-radius: 2em;
  flex: 2;
  margin-right: 2em;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.main_search_result a {
  text-decoration: none;
  margin-left: 1em;
  font-size: 11px;
}

.most_wanted_search_result {
  width: 100%;
  background-color: #f2f2f2;
  border-radius: 2em;
  flex: 1;
}

.search_result_label {
  width: 100%;
  font-weight: bold;
  padding-left: 1em;
}

.search_result_show_more {
  width: 100%;
  font-weight: bold;
}

.main_result_accommodation_thumbnail {
  width: 28%;
  background-color: white;
  border-radius: 2em;
  margin: 1em;
}

.most_wanted_accommodation_thumbnail {
  width: 90%;
  background-color: white;
  border-radius: 2em;
  margin: 1em;
}

/*Activities*/

.search_result_related_activities {
  min-height: 15em;
  width: 100%;
  display: grid;
  grid-template-columns: 25% 25% 25% 25%;
  grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
  grid-column-gap: 20px;
  margin-bottom: 1em;
}

.related_activity_thumbnail_1 {
  grid-column: 1 / 1;
  grid-row: 1 / 11;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_2 {
  grid-column: 2 / 2;
  grid-row: 1 / 6;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_3 {
  grid-column: 2 / 2;
  grid-row: 7 / 11;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_4 {
  grid-column: 3 / 3;
  grid-row: 1 / 11;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_5 {
  grid-column: 4 / 4;
  grid-row: 1 / 5;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

.related_activity_thumbnail_6 {
  grid-column: 4 / 4;
  grid-row: 5 / 11;
  box-shadow: 5px 5px 5px 5px #f2f2f2;
  border-radius: 2em;
  height: 100%;
}

/*footer*/

.footer {
  width: 100%;
  height: 25%;
  display: flex;
  background-color: #f2f2f2;
}

.about_us {
  width: 100%;
  flex: 1;
  margin-left: 2em;
}

.our_accommodations {
  width: 100%;
  flex: 1;
}

.help_center {
  width: 100%;
  flex: 1;
}

.footer_category {
  font-size: 12px;
  font-weight: bold;
  color: black;
}

.footer a {
  font-size: 10px;
  text-decoration: none;
  color: black;
}

